discussion/kv_engine/180448/180448_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52676: [3/3] Move tests to fake implementations of ItemEvictionStrategy

Many tests don't actually care about the hotness or age of items in the
HashTable, but instead want to test PagingVisitor behaviour in fixed
scenarios.

Now that PagingVisitor relies on an ItemEvictionStrategy
implementation, these tests can all move to simple "always/never evict"
impls. This clearly conveys the test writer's intent, while avoiding
having to craft specific MFUs/engine config/cas values.

Change-Id: I9c149ebf96f035aa82260d605abb9a54cb1f1f57

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-09-29 14:42:12.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-29 15:11:56.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20789/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/fake_item_eviction.cc:39:66: error: expected function body after function declarator [clang-diagnostic-error]
                                          vbucket_state_t state) override {
                                                                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20789/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/fake_item_eviction.cc:39:66:
error: expected function body after function declarator [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20789/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49837/ : FAILURE

Compile error at C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.16.27023\include\memory(2539): error C2661: "PagingVisitor::PagingVisitor": no overloaded function takes 9 arguments ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49837/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31181/ : FAILURE

Compile error at [2022-09-29T15:11:04.169Z] /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34:
error: no matching constructor for initialization of "PagingVisitor"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31181/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10502/ : FAILURE

Compile error at [2022-09-29T15:03:53.218Z] /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34:
error: no matching constructor for initialization of "PagingVisitor"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10502/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10602/ : FAILURE

Compile error at [2022-09-29T14:51:43.508Z] /opt/gcc-10.2.0/include/c++/10.2.0/bits/unique_ptr.h:962:30:
error: no matching function for call to ?PagingVisitor::PagingVisitor(KVBucket&, EPStats&, EvictionRatios, std::shared_ptr<cb::Semaphore>&, pager_type_t, bool, VBucketFilter, long unsigned int, long unsigned int)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10602/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22773/ : FAILURE

Compile error at [2022-09-29T15:09:55.365Z] /opt/gcc-10.2.0/include/c++/10.2.0/bits/unique_ptr.h:962:30:
error: no matching function for call to ?PagingVisitor::PagingVisitor(KVBucket&, EPStats&, EvictionRatios, std::shared_ptr<cb::Semaphore>&, pager_type_t, bool, VBucketFilter, long unsigned int, long unsigned int)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22773/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23168/ : FAILURE

Compile error at [2022-09-29T15:05:05.438Z] /opt/gcc-10.2.0/include/c++/10.2.0/bits/unique_ptr.h:962:30:
error: no matching function for call to ?PagingVisitor::PagingVisitor(KVBucket&, EPStats&, EvictionRatios, std::shared_ptr<cb::Semaphore>&, pager_type_t, bool, VBucketFilter, long unsigned int, long unsigned int)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23168/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22173/ : FAILURE

Compile error at [2022-09-29T15:08:26.504Z] /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:3033:32:
error: no matching constructor for initialization of "PagingVisitor"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22173/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23998/ : FAILURE

Compile error at [2022-09-29T15:07:10.403Z] /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34:
error: no matching constructor for initialization of "PagingVisitor"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23998/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20019/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41884/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
